--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @message do |f| %>
   <%= f.label :message %>
-  <%= f.text_area :contents %>
+  <%= f.text_area :contents %><br />
   <%= f.label :file %>
-  <%= f.file_field :csv_file %>
+  <%= f.file_field :csv_file %><br />
+
+  <%= f.submit "Fire Away!" %>
 <% end %>
