Added a bit of javascript to show message length

--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -7,8 +7,9 @@ body {
 .main-form {
     background-color: #99F;
     margin-top: 150px;
+    text-align: center;
 }
 
-form {
-    text-align: center;
+.char-status {
+    color: #f33;
 }
